@@ -98,7 +98,7 @@ static TkCmd commands[] = {
      */
 
     {"bell",		NULL,			Tk_BellObjCmd,		0, 1},
-    {"bind",		Tk_BindCmd,		NULL,			1, 1},
+    {"bind",		NULL,			Tk_BindObjCmd,		1, 1},
     {"bindtags",	NULL,			Tk_BindtagsObjCmd,	1, 1},
     {"clipboard",	NULL,			Tk_ClipboardObjCmd,	0, 1},
     {"destroy",		NULL,			Tk_DestroyObjCmd,	1, 1},
